force-app/main/default/objects/OpportunityLineItem/fields/Alumni_Association__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Association__c</fullName>
    <label>Alumni Association</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Georgia Tech Alumni Association</fullName>
            </value>
            <value>
                <fullName>K-State Alumni Association</fullName>
            </value>
            <value>
                <fullName>Iowa State University Alumni Association</fullName>
            </value>
            <value>
                <fullName>Mizzou Alumni Association</fullName>
            </value>
            <value>
                <fullName>The Kansas University Alumni Association</fullName>
            </value>
            <value>
                <fullName>University Of California Davis Campus Alumni Association</fullName>
            </value>
            <value>
                <fullName>University Of Florida Alumni Association</fullName>
            </value>
            <value>
                <fullName>University Of Kentucky Alumni Association</fullName>
            </value>
            <value>
                <fullName>Mississippi State University Alumni Association</fullName>
            </value>
            <value>
                <fullName>Nebraska Alumni Association</fullName>
            </value>
            <value>
                <fullName>University Of Minnesota Alumni Association</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>