force-app/main/default/objects/OpportunityLineItem/fields/Media_Asset__c.field-meta.xml
<CustomField>
    <fullName>Media_Asset__c</fullName>
    <label>Media Asset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>www.gtalumni.org</fullName>
            </value>
            <value>
                <fullName>https://www.isualum.org/</fullName>
            </value>
            <value>
                <fullName>https://www.mizzou.com/</fullName>
            </value>
            <value>
                <fullName>https://www.huskeralum.org/</fullName>
            </value>
            <value>
                <fullName>Benefit Listing and inclusion in the Special Offer Email</fullName>
            </value>
            <value>
                <fullName>Aggie Rewards Alumni and Member Benefits</fullName>
            </value>
            <value>
                <fullName>https://connect.ufalumni.ufl.edu/</fullName>
            </value>
            <value>
                <fullName>https://www.ukalumni.net/</fullName>
            </value>
            <value>
                <fullName>AgUpdate.com</fullName>
            </value>
            <value>
                <fullName>Irrigation and Lighting</fullName>
            </value>
            <value>
                <fullName>News Harvest</fullName>
            </value>
            <value>
                <fullName>Georgia Tech Alumni Newsletter</fullName>
            </value>
            <value>
                <fullName>CY&apos;s Suitcase</fullName>
            </value>
            <value>
                <fullName>Iowa Stater</fullName>
            </value>
            <value>
                <fullName>At K-State</fullName>
            </value>
            <value>
                <fullName>Bully&apos;s Bark volunteer newsletter</fullName>
            </value>
            <value>
                <fullName>Maroon Insider</fullName>
            </value>
            <value>
                <fullName>Traveling Bulldogs Newsletter</fullName>
            </value>
            <value>
                <fullName>Young Alumni Newsletter</fullName>
            </value>
            <value>
                <fullName>Boone County Chapter Newsletter (MO)</fullName>
            </value>
            <value>
                <fullName>Kansas City Chapter Newsletter</fullName>
            </value>
            <value>
                <fullName>LA/Orange County Chapter Newsletter</fullName>
            </value>
            <value>
                <fullName>Las Vegas Chapter Newsletter</fullName>
            </value>
            <value>
                <fullName>Mizzou Alumni News</fullName>
            </value>
            <value>
                <fullName>Mizzou-YA (Young Alumni) News</fullName>
            </value>
            <value>
                <fullName>San Diego Chapter Newsletter</fullName>
            </value>
            <value>
                <fullName>San Francisco Chapter Newsletter</fullName>
            </value>
            <value>
                <fullName>St. Louis Chapter Newsletter</fullName>
            </value>
            <value>
                <fullName>Touring Tiger News</fullName>
            </value>
            <value>
                <fullName>True Tiger Network News</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>