force-app/main/default/objects/OpportunityLineItem/fields/UnitSize__c.field-meta.xml
<CustomField>
    <fullName>UnitSize__c</fullName>
    <description>This indicates the size of the unit we are proposing to sell; relates to the product family!</description>
    <label>Unit Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Logo and Text</fullName>
            </value>
            <value>
                <fullName>Middle Banner</fullName>
            </value>
            <value>
                <fullName>Special Unit</fullName>
            </value>
            <value>
                <fullName>Half Page</fullName>
            </value>
            <value>
                <fullName>Full Page</fullName>
            </value>
            <value>
                <fullName>Top Banner</fullName>
            </value>
            <value>
                <fullName>Bottom Banner</fullName>
            </value>
            <value>
                <fullName>Front Cover Inside</fullName>
            </value>
            <value>
                <fullName>Back Cover Inside</fullName>
            </value>
            <value>
                <fullName>Post-It</fullName>
            </value>
            <value>
                <fullName>Insert</fullName>
            </value>
            <value>
                <fullName>Front Cover</fullName>
            </value>
            <value>
                <fullName>Back Cover</fullName>
            </value>
            <value>
                <fullName>One-Third Page</fullName>
            </value>
            <value>
                <fullName>Quarter Page</fullName>
            </value>
            <value>
                <fullName>Junior Page</fullName>
            </value>
            <value>
                <fullName>One-Sixth Page</fullName>
            </value>
            <value>
                <fullName>Full Spread</fullName>
            </value>
            <value>
                <fullName>Junior Spread</fullName>
            </value>
            <value>
                <fullName>Two-Page Spread</fullName>
            </value>
            <value>
                <fullName>Wrapper</fullName>
            </value>
            <value>
                <fullName>Standard Post</fullName>
            </value>
            <value>
                <fullName>Homepage Hero Rotator Ad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>